<resources>
    <string name="app_name">BestRecipes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Best family recipes</string>
    <string name="nav_header_subtitle">best_family_recipes@mail.ru</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_recipes">Рецепты</string>
    <string name="menu_add_new_recipe">Добавить новый рецепт</string>
    <string name="menu_settings">Настройки</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_add_new_recipe">Новый рецепт</string>
    <string name="fragment_recipes">Рецепты</string>
    <string name="menu_additional">Дополнительно</string>
    <string name="menu_authorization">Авторизация</string>
    <string name="nav_list_of_ingredients">Список ингредиентов для блюда</string>
    <string name="nav_cooking_instructions">Инструкции по приготовлению</string>
    <string name="recipe">Рецепт</string>
</resources>