<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recipes"
            android:icon="@drawable/icon_recipes"
            android:title="@string/menu_recipes" />
        <item
            android:id="@+id/nav_new_recipe"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/menu_add_new_recipe" />
    </group>

    <item android:title="@string/menu_additional">
        <menu>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/menu_authorization" />
        </menu>
    </item>
</menu>